Added CSS styling

--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Stefano's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h1>test</h1>
   <table cellspacing="10">
     <tr>
       <td>
-        <img
-          src="https://scontent.fsub8-1.fna.fbcdn.net/v/t1.0-1/p160x160/13524551_111932195903440_1422535787364819667_n.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_oc=AQmCI28KS8UupH5cAmW-nZPVAKaI76IzZ45-fxMZ_AXyqZckB5i4dkJVGZ3JdqvSPUk&_nc_ht=scontent.fsub8-1.fna&_nc_tp=6&oh=4b4a997dfe729ec7956ae8027a1eecc9&oe=5EB6F5C5"
-          alt="stefano profile picture" />
+        <img class="profilePic circular" src="https://scontent.fsub8-1.fna.fbcdn.net/v/t1.0-1/p160x160/13524551_111932195903440_1422535787364819667_n.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_oc=AQmCI28KS8UupH5cAmW-nZPVAKaI76IzZ45-fxMZ_AXyqZckB5i4dkJVGZ3JdqvSPUk&_nc_ht=scontent.fsub8-1.fna&_nc_tp=6&oh=4b4a997dfe729ec7956ae8027a1eecc9&oe=5EB6F5C5" alt="stefano profile picture" />
       </td>
       <td>
-        <h1>Stefano Christian</h1>
+        <h1 id="heading">Stefano Christian</h1>
         <p>
           <em>CS Student in <strong><a href="https://binus.ac.id/">Binus University</a></strong></em>
         </p>
