--- a/index.html
+++ b/index.html
@@ -1,81 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Stefano's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
-  <table cellspacing="10">
-    <tr>
-      <td>
-        <img class="profilePic circular" src="https://scontent.fsub8-1.fna.fbcdn.net/v/t1.0-1/p160x160/13524551_111932195903440_1422535787364819667_n.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_oc=AQmCI28KS8UupH5cAmW-nZPVAKaI76IzZ45-fxMZ_AXyqZckB5i4dkJVGZ3JdqvSPUk&_nc_ht=scontent.fsub8-1.fna&_nc_tp=6&oh=4b4a997dfe729ec7956ae8027a1eecc9&oe=5EB6F5C5" alt="stefano profile picture" />
-      </td>
-      <td>
-        <h1 id="heading">Stefano Christian</h1>
-        <p>
-          <em>CS Student in <strong><a href="https://binus.ac.id/">Binus University</a></strong></em>
-        </p>
-        <p>
-          I am a freshmen in Binus University majoring in Computer Science.
-        </p>
-      </td>
-    </tr>
-  </table>
-  <hr />
-  <h3>Education</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Name</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2016-2019</td>
-        <td>High School: <a href="http://smakkosayu.sch.id/v3/">Kolese Santo Yusup Senior High School</a></td>
-      </tr>
-    </tbody>
-  </table>
-  <hr />
-  <a href="hobbies.html">
-    <h3>Hobbies</h3>
-  </a>
-  <hr />
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Photography</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Game Development</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Programming</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <hr />
-  <h3><a href="contact.html">Contact Me</a></h3>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>Stefano Christian Wiryana</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Crimson+Text|Spartan&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud.png">
+      <h1>I'm Stefano</h1>
+      <h3>A <span class="pro">pro</span>grammer</h3>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud.png">
+      <img src="images/mountain.png" alt="mountain.png">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profilePic" src="images/profilepic.png" alt="stefano christian wiryana profile picture">
+        <h2>Hi!</h2>
+        <p>I'm a programmer / developer based in Malang, Indonesia. I write code for websites, games, and mobile apps. I have a strong passion in both frontend and backend programming and I always welcome any challenges in my line of work.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="browserImg" src="images/browser.png" alt="browser.png">
+          <h3>Full Stack Web Development</h3>
+          <p>I started my coding journey since I was 12 years old and I have been polishing my skills ever since. I have experience in both front end and back end development.</p>
+        </div>
+        <div class="skill-row">
+          <img class="gamepadImg" src="images/gamepad.png" alt="gamepad.png">
+          <h3>2D & 3D Game Development</h3>
+          <p>I got into my first game jam in my first year in University. I enjoy designing games and coding them to make them impactful and fun to play. I use unity as my main tool.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>I'm open for any freelance work you got</h3>
+        <p>If you have any project that you need my help with or if you just want to casually say hi, then get in touch.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2020 Stefano Christian Wiryana. All rights reserved.</p>
+    </div>
+  </body>
 </html>
