--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>I'm open for any freelance work you got</h3>
-        <p>If you have any project that you need my help with or if you just want to casually say hi, then get in touch.</p>
+        <p>If you have any project that you need my help with or just want to casually say hi, then get in touch.</p>
         <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
